--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "tenacity (>=9.1.2,<10.0.0)",  # Error handling and retrying library
     "fastapi[all] (>=0.115.12,<0.116.0)",  # Web framework for building APIs
     "sqlalchemy (>=2.0.41,<3.0.0)",  # SQL toolkit
+    "psycopg2-binary (>=2.9.9,<3.0.0)",  # Postgres driver
     "scikit-learn (>=1.7.0,<2.0.0)",  # Machine learning
     "fastmcp (>=2.10.5,<3.0.0)",
     "python-dateutil (>=2.9.0.post0,<3.0.0)",
@@ -173,6 +174,9 @@ asyncio_mode = "auto"
 pythonpath = "src"
 filterwarnings = [
     "ignore::DeprecationWarning:qdrant_client.*",
+]
+markers = [
+    "integration: tests that require external services",
 ]
 
 
